gcc/testsuite/gdc.test/fail_compilation/fail7424c.d
struct S7424c
{
    @property int g()() { return 0; }
    void test() immutable { int f = g; }
}

